tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_patterns_flags_r_e_format_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_patterns
    - "-r"
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
glob_patterns
 - crate::dir_module
 - crate::dir_module::child_file::greet
 - crate::file_module
 - crate::file_module::greet
 - crate::file_module::nesting_depth
 - crate::glob_patterns::constants::*
 - crate::glob_patterns::mixed_exports::func_one
 - crate::glob_patterns::mixed_exports::func_three
 - crate::glob_patterns::mixed_exports::func_two
 - crate::glob_patterns::mixed_exports::special_function
 - crate::glob_patterns::outer::*
 - crate::glob_patterns::self_ref::*
 - crate::glob_patterns::set_a::*
 - crate::glob_patterns::set_b::*
 - crate::glob_patterns::traits::*
 - crate::glob_patterns::types::*
 - crate::glob_patterns::utilities::*
glob_patterns::constants
glob_patterns::mixed_exports
glob_patterns::outer
 - crate::glob_patterns::outer::inner::*
glob_patterns::outer::inner
glob_patterns::self_ref
glob_patterns::set_a
glob_patterns::set_b
glob_patterns::traits
glob_patterns::types
glob_patterns::utilities

----- stderr -----
