tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_patterns_flags_r_e_grouped_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - glob_patterns
    - "-r"
    - "-e"
    - "--grouped"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
glob_patterns
 - crate::dir_module
 - crate::file_module
 - crate::glob_patterns::self_ref::self_func_1
 - crate::glob_patterns::self_ref::self_func_2
glob_patterns::constants
glob_patterns::mixed_exports
glob_patterns::outer
glob_patterns::outer::inner
glob_patterns::self_ref
glob_patterns::set_a
glob_patterns::set_b
glob_patterns::traits
glob_patterns::types
glob_patterns::utilities

----- stderr -----
