tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_patterns_flags_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - glob_patterns
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module
crate::file_module
crate::glob_patterns::self_ref::self_func_1
crate::glob_patterns::self_ref::self_func_2

----- stderr -----
