tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_showcase_flags_e.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::glob_showcase::api::*
crate::glob_showcase::config::all::*
crate::glob_showcase::database::*
crate::glob_showcase::errors::*
crate::glob_showcase::models::*
crate::glob_showcase::traits::*
crate::glob_showcase::utils::collection::*
crate::glob_showcase::utils::math::*
crate::glob_showcase::utils::string::*
crate::inline_modules::*
crate::nesting::level1::level2::*

----- stderr -----
