tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_showcase_flags_r_e.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-r"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api::*
crate::glob_showcase::api::delete_data
crate::glob_showcase::api::get_data
crate::glob_showcase::api::set_data
crate::glob_showcase::config::all::*
crate::glob_showcase::config::client::*
crate::glob_showcase::config::logging::*
crate::glob_showcase::config::server::*
crate::glob_showcase::database::*
crate::glob_showcase::database::connect
crate::glob_showcase::database::connection::*
crate::glob_showcase::database::disconnect
crate::glob_showcase::database::execute
crate::glob_showcase::database::query::*
crate::glob_showcase::database::transaction::*
crate::glob_showcase::errors::*
crate::glob_showcase::errors::NotFoundError
crate::glob_showcase::errors::ValidationError
crate::glob_showcase::models::*
crate::glob_showcase::models::Comment
crate::glob_showcase::models::Post
crate::glob_showcase::models::User
crate::glob_showcase::traits::*
crate::glob_showcase::traits::Identifiable
crate::glob_showcase::traits::Nameable
crate::glob_showcase::traits::Validatable
crate::glob_showcase::utils::collection::*
crate::glob_showcase::utils::math::*
crate::glob_showcase::utils::math::add
crate::glob_showcase::utils::math::divide
crate::glob_showcase::utils::math::multiply
crate::glob_showcase::utils::math::subtract
crate::glob_showcase::utils::string::*
crate::glob_showcase::utils::string::lowercase
crate::glob_showcase::utils::string::uppercase
crate::inline_modules::*
crate::nesting::level1::level2::*

----- stderr -----
